# ev_workshop

./: README.md  installroboto.sh  pyproject.toml  viz-workshop.ipynb
.devcontainer/: devcontainer.json
data/: imdb.parquet
