[project]
name = "ev-github"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "highlight-text>=0.2",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.5",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "scipy>=1.15.2",
]
